Sanitize with -Xsource:3 continued